fixed: navbar no longer hides section title when jumping to section

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ code {
 }
 
 .section {
-  margin: 4em 1em 0 1em;
-  border: 2px solid;
+  padding-top: 4em;
+  border-bottom: 2px solid;
+}
+
+.content {
+  margin: 0 4em
 }
